apps/web-giddh/src/app/shared/primary-sidebar/company-branch/company-branch.component.scss
@import '../../../../assets/css/color.scss';
.company-branch-dropdown{
    font-family: 'opensans-regular';
    padding: 0 20px;
    .search-box {
        .input-group-text {
            background-color: $solitude-new;
            padding: 8px !important;
        }
        input {
            border-left: none;
            padding-left: 0 !important;
            background-color: $solitude-new !important;
            border-top-left-radius: 0px !important;
            border-bottom-left-radius: 0px !important;
            border-top-right-radius: 0px !important;
            border-bottom-right-radius: 0px !important;
            &:focus {
                border-color: $gainsboro !important;
            }
        }
        .input-group-append {
            font-size: 12px;
            color: $grey-chateau;
            right: 10px;
            top: 0;
            padding: 0 5px;
            height: 36px;
            display: flex;
            justify-content: center;
            align-items: center;
            background-color: $solitude-new;
            border: 1px solid $gainsboro;
            border-radius: 5px;
            border-left: none;
            border-top-left-radius: 0px !important;
            border-bottom-left-radius: 0px !important;
        }
    }
    tab{
        position: relative;
        font-family: 'opensans-regular' !important;
    }
    tab.icon-company{
        &::before{
            display: none;
        }
    }
    tab.icon-branch1{
        &::before{
            display: none;
        }
    }
    .total-company{
        .company-count{
            color: $comet;
        }
    }
    .company-list{
        height: calc(100vh  - 325px) !important;
        overflow: auto;
        margin: 0 -20px;
        padding: 0 20px 20px;
        padding-bottom: 50px;
        ul{
            li{
                padding: 10px 0;
                cursor: pointer;
                color: $trout;
                &.btn-group{
                    display: flex;
                    flex-direction: column;
                    span{
                        white-space: normal;
                        word-break: break-all;
                        i.icon-company{
                            float: left;
                            width: 14px;
                        }
                        .company-name-right{
                            float: left;
                            width: 86%;
                            white-space: nowrap;
                            overflow: hidden;
                            text-overflow: ellipsis;
                            max-width: 150px;
                            padding: 3px 0;
                        }
                    }
                    &.open{
                        background-color: $dark-alice-blue;
                        margin: 0 -20px;
                        p.show-more-branches {
                            padding: 6px 15px;
                        }
                        li.create-branch{
                            padding: 10px 15px;
                        }
                        .dropdown-toggle{
                            padding: 0 20px;
                        }
                    }
                    .dropdown-menu{
                        position: static !important;
                        box-shadow: none;
                        border: none;
                        margin: 0 ;
                        background-color: transparent;
                        padding: 0;
                        li{
                            padding:  0;
                            &.show-more-branches, &.create-branch{
                                padding: 0 20px;
                            }
                            a{
                                background-color: transparent;
                                padding:8px 20px;
                                &:hover{
                                    background-color: initial !important;
                                    color: initial !important;

                                }
                                &.head-branch{
                                    color: $cornflower;
                                    .branch-company-name{
                                        max-width: 150px;
                                        text-overflow: ellipsis;
                                        overflow: hidden;
                                        white-space: nowrap;
                                        padding: 3px 0;
                                    }
                                }
                                &.company-branches-list{
                                    .branch-alias, .branch-company-name{
                                        max-width: 150px;
                                        text-overflow: ellipsis;
                                        overflow: hidden;
                                        white-space: nowrap;
                                        padding: 3px 0;
                                    }
                                }
                            }

                            &:hover{
                                a{
                                    background-color: $sunshine !important;
                                }
                            }
                        }
                    }
                    p.show-more-branches {
                        color: $midnight-blue;
                        padding: 10px 0;
                        text-decoration: underline;
                    }
                    li.create-branch{
                        color: $orange;
                        padding: 6px 0;
                    }
                }
            }
        }
        &.company-branches-list{
           .branch-alias , .branch-company-name{
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
            max-width: 150px;
            padding: 3px 0;
           }
        }
        &.branch-list{
            ul{
                margin: 0 -20px;
                li{
                    padding: 0;
                    cursor: pointer;
                    margin-bottom: 0;
                    a{
                        background-color: transparent;
                        padding:8px 20px;
                        color: $trout;
                        &:hover{
                            background-color: initial !important;
                            color: initial !important;

                        }
                    }
                    &:hover{
                        a{
                            background-color: $sunshine !important;
                        }
                    }
                    .branch-alias , .branch-company-name{
                        text-overflow: ellipsis;
                        white-space: nowrap;
                        overflow: hidden;
                        max-width: 150px;
                        padding: 3px 0;
                       }
                }
            }
        }
    }
    .profile-user {
        position: fixed;
        bottom: 0;
        width: 240px;
        left: 0;
        padding: 5px 0 0;
        border-top: 1px solid $gainsboro;
        background-color: $white;
        z-index: 990;
        .profile-name{
            padding: 14px 15px;
            cursor: pointer;
            min-width: 120px;
            .profile-alice {
                display: inline-flex;
                width: 24px;
                height: 24px;
                background-color: $cornflower;
                border-radius: 30px;
                font-size: 12px;
                justify-content: center;
                align-items: center;
                color: $white;
            }
        }
        .profile-logout{
            button{
                background-color: $white;
                border: 1px solid $white;
                padding: 14px 15px;
                color: $trout;
                display: flex;
                justify-content: center;
                align-items: center;
                min-width: 120px;
                border-left-color: $dark-fog;
            }
        }
    }
    .custom-tabs {
        .icon-copmany-branch-connect{
            position: absolute;
            top: 5px;
            left: 100px;
        }
    }
    .company-branch-opt-2{
        .company-list{
            height: calc(90vh - 120px) !important;
            ul{
                position: relative;
                li{
                    padding: 0;
                    margin: 0 -20px;
                    span{
                        padding: 6px 20px;
                        color: $slate;
                        &.company-name {
                            display: flex !important;
                            align-items: center !important;
                            justify-content: space-between !important;
                             span{
                                 i{
                                    float: left;
                                    width: 14px;
                                 }
                                 span.select-company-name{
                                    float: left;
                                    width: 87%;
                                    padding: 0;
                                    text-overflow: ellipsis;
                                    white-space: nowrap;
                                    overflow: hidden;
                                    max-width: 150px;
                                    padding: 3px 0;
                                 }
                             }
                        }
                    }
                    &.btn-group{
                        &.open{
                            span{
                                &.dropdown-toggle{
                                    padding: 8px 20px;
                                }
                                &.active{
                                    background-color: $dark-alice-blue;
                                    position: sticky;
                                    top: 0;
                                    z-index: 991;
                                }
                                .icon-down-new{
                                    transform: rotate(180deg)
                                }
                            }
                            background-color: transparent;
                            ul{
                                padding: 0 20px;
                                li{
                                    span{
                                        padding: 0;
                                    }
                                }
                            }
                            .total-branches{
                                padding: 10px 20px;
                            }
                        }
                    }
                    a{
                        padding: 8px 20px !important;
                    }
                }
            }
        }
    }
}
.digit-blue{
    color: $cornflower !important;
}
.digit-orange{
    color: $orange-new !important;
}

@media screen and (max-height: 800px) {
    .company-branch-dropdown{
        .company-list {
            height: calc(65vh - 60px) !important;
        }
    }
    .company-branch-opt-2{
        .company-list{
            height: calc(80vh - 120px) !important;
        }
    }
}

